main/default/objects/Location__c/fields/Convective_Storm_Value__c.field-meta.xml
<CustomField>
    <fullName>Convective_Storm_Value__c</fullName>
    <label>Convective Storm Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>