main/default/objects/Location__c/fields/Crime_Score__c.field-meta.xml
<CustomField>
    <fullName>Crime_Score__c</fullName>
    <label>Crime Score</label>
    <length>18</length>
    <type>Text</type>
</CustomField>