main/default/objects/Location__c/fields/Distance_To_Brush__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_Brush__c</fullName>
    <label>Distance To Brush</label>
    <length>255</length>
    <type>Text</type>
</CustomField>