main/default/objects/Location__c/fields/Earthquake_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Earthquake_Risk_Score__c</fullName>
    <label>Earthquake Risk Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>