main/default/objects/Location__c/fields/EarthquakeMMI__c.field-meta.xml
<CustomField>
    <fullName>EarthquakeMMI__c</fullName>
    <label>EarthquakeMMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>