main/default/objects/Location__c/fields/Flood_Score__c.field-meta.xml
<CustomField>
    <fullName>Flood_Score__c</fullName>
    <label>Flood Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>