main/default/objects/Location__c/fields/Hail_Probability__c.field-meta.xml
<CustomField>
    <fullName>Hail_Probability__c</fullName>
    <label>Hail Probability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>