main/default/objects/Location__c/fields/Hurricane_Probability__c.field-meta.xml
<CustomField>
    <fullName>Hurricane_Probability__c</fullName>
    <label>Hurricane Probability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>