main/default/objects/Location__c/fields/Location_Intel_Order__c.field-meta.xml
<CustomField>
    <fullName>Location_Intel_Order__c</fullName>
    <label>Location Intel Ordered Date</label>
    <type>DateTime</type>
</CustomField>