main/default/objects/Location__c/fields/Protection_Class__c.field-meta.xml
<CustomField>
    <fullName>Protection_Class__c</fullName>
    <label>Protection Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>