main/default/objects/Location__c/fields/Storm_Surge_Score__c.field-meta.xml
<CustomField>
    <fullName>Storm_Surge_Score__c</fullName>
    <label>Storm Surge Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>