main/default/objects/Location__c/fields/Straight_Wind_Probability__c.field-meta.xml
<CustomField>
    <fullName>Straight_Wind_Probability__c</fullName>
    <label>Straight Wind Probability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>