main/default/objects/Location__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>