main/default/objects/Location__c/fields/Wild_Fire_Risk__c.field-meta.xml
<CustomField>
    <fullName>Wild_Fire_Risk__c</fullName>
    <label>Wild Fire Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>