main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State_Province__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Geolocation__Latitude__s</columns>
    <columns>Geolocation__Longitude__s</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>